--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+
     <header>
         <div class="container">
             <h1>EBAC News</h1>
@@ -21,7 +21,10 @@
                 <button type="submit">Pesquisar</button>
             </form>
         </div>
-        <nav>
+        <div class="botao-menu">
+            <button type="button">Abrir menu</button>
+        </div>
+        <nav class="container">
             <ul class="menu">
                 <li>
                     Esportes
@@ -43,9 +46,87 @@
             <div class="clear"></div>
         </nav>
     </header>
-    <div class="conteudo">
-        
+    <div class="container conteudo">
+        <main>
+            <section class="destaque">
+                <h2>Em destaque</h2>
+                <article class="noticia">
+                    <a href="">
+                        <img src="https://placehold.co/320x320">
+                        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                            laudantium nemo</h3>
+                    </a>
+                </article>
+            </section>
+            <section>
+                <h2>Últimas Notícias</h2>
+                <div class="noticias">
+                    <article class="noticia">
+                        <a href="">
+                            <img src="https://placehold.co/320x320">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                                laudantium nemo</h3>
+                        </a>
+                    </article>
+                    <article class="noticia">
+                        <a href="">
+                            <img src="https://placehold.co/320x320">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                                laudantium nemo</h3>
+                        </a>
+                    </article>
+                    <article class="noticia">
+                        <a href="">
+                            <img src="https://placehold.co/320x320">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                                laudantium nemo</h3>
+                        </a>
+                    </article>
+                    <article class="noticia">
+                        <a href="">
+                            <img src="https://placehold.co/320x320">
+                            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                                laudantium nemo</h3>
+                        </a>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <aside>
+            <section class="novidades">
+                <h2>Novidades</h2>
+                <article class="noticia">
+                    <a href="">
+                        <img src="https://placehold.co/320x320">
+                        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                            laudantium nemo</h3>
+                    </a>
+                </article>
+                <article class="noticia">
+                    <a href="">
+                        <img src="https://placehold.co/320x320">
+                        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                            laudantium nemo</h3>
+                    </a>
+                </article>
+                <article class="noticia">
+                    <a href="">
+                        <img src="https://placehold.co/320x320">
+                        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus nam quos modi. Quae
+                            laudantium nemo</h3>
+                    </a>
+                </article>
+            </section>
+        </aside>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function () {
+        $('.botao-menu button').click(function () {
+            $('.menu').slideToggle();
+        });
+    });
+</script>
 
 </html>
